# Rosetta1

./: .env.example  .gitignore  README.md  main.py  requirements.txt
analytics/: backtest.py  dashboard.py  logger.py  performance.py
broker/: base.py  paper.py  robinhood.py
config/: settings.py
data/: feed.py  history.py  indicators.py  regime.py  sector.py  session.py  universe.py
execution/: order_manager.py
risk/: guard.py
rosetta1-app/: package-lock.json  package.json
rosetta1-app/src-tauri/: Cargo.toml  tauri.conf.json
rosetta1-app/src-tauri/capabilities/: default.json
rosetta1-app/src-tauri/src/: main.rs
rosetta1-app/ui/: app.js  index.html  style.css
scripts/: stop.sh
signals/: base.py  ema_cross.py  momentum.py  orb.py  rsi.py  vwap.py
strategy/: engine.py
tests/: test_analytics.py  test_backtest.py  test_broker.py  test_dashboard.py  test_feed.py  test_indicators.py  test_integration_v2.py  test_order_manager.py  test_position_sizing.py  test_regime.py  test_risk.py  test_sector.py
tests/signals/: test_ema_cross.py  test_engine.py  test_momentum.py  test_orb.py  test_rsi.py  test_vwap.py
